--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -11,6 +11,8 @@
     "outDir": "../dist/out-tsc",
     "sourceMap": true,
     "target": "es5",
+    "removeComments": false,
+    "noImplicitAny": false,
     "typeRoots": [
       "../node_modules/@types"
     ]
