--- a/package.json
+++ b/package.json
@@ -24,10 +24,14 @@
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
     "axios": "^0.15.3",
+    "bcryptjs": "^2.4.0",
     "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
     "express": "^4.14.0",
     "hammerjs": "^2.0.8",
+    "jsonwebtoken": "^7.2.1",
+    "mongoose": "^4.7.5",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
