--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "hammerjs": "^2.0.8",
     "jsonwebtoken": "^7.2.1",
     "mongoose": "^4.7.5",
+    "mongoose-unique-validator": "^1.0.3",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
