--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.14.0",
     "hammerjs": "^2.0.8",
     "jsonwebtoken": "^7.2.1",
+    "mdbootstrap": "^4.2.0",
     "mongoose": "^4.7.5",
     "mongoose-unique-validator": "^1.0.3",
     "rxjs": "^5.0.1",
